// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 gzisev"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            This is a Banner.
          </h6>
        </section>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kMmFgx"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 eTIRkY"
      >
        <div
          alt={null}
          className="Avatar__TagContainer-sc-1vuf9om-1 eMkMqM"
          id={null}
          label={null}
          onClick={null}
          src={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user fa-w-14 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
            color={null}
            data-icon="user"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 hGQHrW"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            This is a Banner
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            A description can go here, if necessary.
          </p>
          <a
            className="Typography__LinkText-sc-19auepv-1 fLIgSj"
            fontSize="inherit"
            fontWeight={600}
            href={null}
            letterSpacing="0px"
            onClick={null}
            target={null}
          >
            Link Text
          </a>
        </section>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kMmFgx"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 gzisev"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 dSTdeN"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 dSTdeN"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 dSTdeN"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 eMkMqM"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-user fa-w-14 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="user"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 gzisev"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 iVDGJZ"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-info fa-w-6 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="info"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 192 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is an Info Banner.
            </h6>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 gzisev"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 jfUEbf"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-check fa-w-16 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="check"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Success Banner.
            </h6>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[` 7`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 gzisev"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 htJGsr"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-exclamation fa-w-6 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="exclamation"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 192 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Warning Banner.
            </h6>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[` 8`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 gzisev"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 gugBSi"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="times"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is an Alert Banner.
            </h6>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[` 9`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 gzisev"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 dSTdeN"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 dSTdeN"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 dSTdeN"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 eMkMqM"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-user fa-w-14 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="user"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 iVDGJZ"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-info fa-w-6 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="info"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 192 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is an Info Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 jfUEbf"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-check fa-w-16 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="check"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Success Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 htJGsr"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-exclamation fa-w-6 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="exclamation"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 192 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is a Warning Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-2 hBFBeu"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-1 eTIRkY"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 gugBSi"
            id={null}
            label={null}
            onClick={null}
            src={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="times"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 hGQHrW"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm"
            id={null}
            rows={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This is an Alert Banner.
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 CcLky"
              fontSize="0.75em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              A description can go here, if necessary.
            </p>
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Link Text
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-1 kMmFgx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Banner__Close-sc-6825al-1 cgOoTm"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
</div>
`;
